--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+:root{
+    --primary-color: #004eda;
+    --background-color:#f2f2f8;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
+
+    display: grid;
+    grid-template-columns: 240px 1fr;
+    grid-template-rows: 64px auto;
+}
+
+img{
+    max-width: 100%;
+}
+
+.mainNav{
+    grid-row: 1 / -1;
+    grid-column: 1 / 2;
+    background-color: #ccc;
+}
+
+.topNav{
+    grid-row: 1 / 2;
+    grid-column: 2 / -1;
+    background-color: #ddd;
+}
+
+main{
+    grid-row: 2 / -1;
+    grid-column: 2 / -1;
+    background-color: #eee;
 }
