--- a/estilo.css
+++ b/estilo.css
@@ -1,19 +1,20 @@
 :root {
-    --primary-color: #004eda;
-    --background-color: #f2f2f8;
+    --primary-color: #004EDA;
+    --grey: #F2F2F8;
     --default-padding: 2rem;
-    --black:#111;
-    --color-text: #5a5a5f;
-    
+    --middle-padding: calc(var(--default-padding) / 2);
+    --black: #111;
+    --color-text: #5A5A5F;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
     color: var(--color-text);
     display: grid;
     grid-template-columns: max-content 1fr;
-    grid-template-rows: 64px auto;
+    /* grid-template-rows: 64px auto; */
+    grid-template-rows: 4rem minmax(calc(100vh - 4rem), auto);
+    margin: 0;
 }
 
 img {
@@ -29,10 +30,10 @@ img {
     max-height: 100vh;
     position: sticky;
     top: 0;
-    padding-right: var(--default-padding);
+    /* padding-right: var(--default-padding); */
 }
 
-.topNav {
+.topnav {
     grid-row: 1 / 2;
     grid-column: 2 / -1;
     background-color: white;
@@ -44,24 +45,25 @@ img {
 main {
     grid-row: 2 / -1;
     grid-column: 2 / -1;
-    background-color: var(--background-color);
+    background-color: var(--grey);
 
     display: grid;
     gap: var(--default-padding);
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: min-content;
+
     padding: var(--default-padding);
 }
 
-main >*{
-    grid-column: 1 / -1;
+main>* {
+    grid-column: span 2;
 }
 
-main > .grid-half{
+main>.grid-half {
     grid-column: span 1;
 }
 
-main > figure{
+main>figure {
     margin: 0;
 }
 
@@ -72,32 +74,47 @@ main > figure{
     color: var(--black);
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1.5rem;
+    padding-right: var(--default-padding);
 }
 
 .mainNav_menu,
-.topNav_menu {
-    list-style: none;
+.topnav_menu {
+    list-style-type: none;
     margin: 0;
     padding: 0;
     padding-left: var(--default-padding);
 }
 
-.topNav_menu{
+.mainNav_menu {
+    padding-right: var(--default-padding);
+}
+
+.mainNav_menu a,
+.topnav_menu a {
+    text-decoration: none;
+    color: #5A5A5F;
+}
+
+.mainNav_menu svg,
+.topnav_menu svg {
+    vertical-align: bottom;
+}
+
+.topnav_menu {
     display: flex;
     gap: var(--default-padding);
-    
 }
 
 .mainNav_menus {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1;
+    flex-grow: 1;
     padding-top: var(--default-padding);
 }
 
-.mainNav_menu li{
+.mainNav_menu li {
     margin-top: 1rem;
 }
 
@@ -105,79 +122,79 @@ main > figure{
     padding-bottom: var(--default-padding);
 }
 
-.mainNav_menu a,
-.topNav_menu a{
-    text-decoration: none;
-    color: #5a5a5f;
+.mainNav_menu:not(:last-child) {
+    border-bottom: 2px solid var(--grey);
+    padding-bottom: var(--default-padding);
 }
 
-.mainNav_menu svg,
-.topNav_menu svg{
-    vertical-align: bottom;
-}
-
-.perfil{
+.perfil {
     margin-right: var(--default-padding);
     display: flex;
+    height: 100%;
     align-items: center;
 }
 
-.perfil_tumb{
-    height: 60px;
-    margin-right: calc(var(--default-padding) / 2);
+.perfil_thumb {
+    height: 100%;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    margin-right: var(--middle-padding);
+    box-sizing: border-box;
 }
 
-.perfil_tumb img{
+.perfil_thumb img {
     height: 100%;
 }
-.perfil_name{
+
+.perfil_name {
     font-size: .8rem;
     font-weight: 600;
     color: var(--black);
 }
 
-.perfil_rule{
+.perfil_rule {
     font-size: .7rem;
     font-weight: 500;
     text-transform: uppercase;
-    color: color-mix(in srgb, black  100%, transparent 60%);
+    color: color-mix(in srgb, var(--black), transparent 60%);
 }
 
-.summary{
+.summary {
     background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: calc(var(--default-padding) / 2) var(--default-padding);
+    padding: var(--middle-padding) var(--default-padding);
     border-radius: 4px;
 }
-.summary article{
-    padding: calc(var(--default-padding) / 2) 0;
-    
+
+.summary article {
+    padding: var(--middle-padding) 0;
 }
 
-.number{
-    color: var(--primary-color);
+.summary_number {
     font-size: 1.2rem;
+    color: var(--primary-color);
     font-weight: 600;
-    margin-left: calc(var(--default-padding) / 2);
- 
+    margin-left: var(--middle-padding);
 }
 
-.btn{
-    background-color: var(--primary-color);
-    padding: 16px 25px;
-    text-decoration: none;
-    color: white;
-    border-radius: 5px;
-}
-
-.separeted{
+.summary_separated {
     width: 2px;
-    background-color: var(--background-color);
+    background-color: var(--grey);
     align-self: stretch;
 }
 
-.summary .btn{
+.btn {
+    background-color: var(--primary-color);
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    padding: calc(var(--middle-padding) / 2) var(--default-padding);
+}
+
+.summary_btn {
     align-self: stretch;
+    display: flex;
+    align-items: center;
 }
